con el NETLIFY JML

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>Enviar SMS con Textbelt</h2>
+    <h2>Enviar SMS con Textbelt JML 11.40</h2>
 
     <label for="telefono">Número de teléfono:</label>
     <input id="telefono" type="text" value="+5491150021672">
